--- a/src/app/core/product-feature/view-cart/view-cart.component.html
+++ b/src/app/core/product-feature/view-cart/view-cart.component.html
@@ -48,7 +48,7 @@
 
                     <div class="cart_buttons">
                         <button type="button" class="button cart_button_clear" routerLink="/product/listing">Continue Shopping</button>
-                        <button type="button" class="button cart_button_checkout"  routerLink="/checkout" (click)="onAddOrder(foods)">Check Out</button>
+                        <button type="button" class="button cart_button_checkout"  routerLink="/checkout" >Check Out</button>
                      </div>
                </div>
            </div>
