chages in dashboard & edit product

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,147 +1,160 @@
-    <div class="container justify-content-center my-5" >
-        <button class="btn btn-success" [routerLink]="['/product/add']">Add Product</button>
-        <button  class="btn btn-success mx-3" [routerLink]="['/order']">Orders </button>
-        <button class="btn btn-success " [routerLink]="['/product/listing']">Menu</button>
-        <form class="d-flex">
-          <input  class="form-control me-2 search fs-4 mx-3" name="search" [(ngModel)]="searchInput" type="search" placeholder="Search" aria-label="Search">
+<div class="container-fluid d-flex p-0">
+
+  <div class="col-md-4 d-flex flex-column flex-shrink-0 p-3 text-white nav-bg" style="width: 250px;"> <a href="/"
+      class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none"> <svg class="bi me-2"
+        width="40" height="32"> </svg> <span class="fs-4">Welcome Back</span> </a>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-auto">
+      <li>
+        <form class="d-flex mt-5 mb-5">
+          <input class="form-control me-2 search fs-4 mx-3" name="search" [(ngModel)]="searchInput" type="search"
+            placeholder="Search" aria-label="Search">
         </form>
-  
-        <button class="btn btn-success " [routerLink]="['/contact']">feedbacks</button>
+      </li>
+      <li class="nav-item"> <a class="nav-link text-white" aria-current="page"> <i class="fa fa-home"></i><span class="ms-2"
+            [routerLink]="['/dashboard']">Home</span> </a> </li>
+      <li> <a class="nav-link text-white"> <i class="fa fa-dashboard"></i><span class="ms-2"
+            [routerLink]="['/product/add']"><i class="fas fa-plus"></i> Add Product</span> </a> </li>
+      <li> <a class="nav-link text-white"> <i class="fab fa-battle-net"></i><span class="ms-2"
+            [routerLink]="['/order']">Orders</span> </a> </li>
+      <li> <a class="nav-link text-white"> <i class="fa fa-bookmark"></i><span class="ms-2"
+            [routerLink]="['/contact']">Messages</span> </a> </li>
+    </ul>
+  </div>
 
-     <!-- <router-outlet></router-outlet> -->
+
+  <div class="row w-100 mx-auto">
+    <table class=" table table-bordered text-center">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Image</th>
+          <th scope="col">Description</th>
+          <th scope="col">Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let prod of productArr | filter: searchInput | paginate:{ itemsPerPage: 5, currentPage: p}">
+          <td>{{prod.id}}</td>
+          <td>{{prod.name}}</td>
+          <td><img src="{{prod.imagepath}}" style="width: 80px; height: 80px;" alt=""></td>
+          <td>{{prod.description}}</td>
+          <td>{{prod.price}}</td>
+          <td><button class="btn btn-default" data-bs-toggle="modal" data-bs-target="#show"
+              (click)="getProductById(prod.id!)"><i class="fas fa-eye"></i></button></td>
+          <td><button class="btn btn-default" data-bs-toggle="modal" data-bs-target="#edit"
+              (click)="getProductById(prod.id!)"><i class="fas fa-edit"></i></button></td>
+          <td><button class="btn btn-default" data-bs-toggle="modal" data-bs-target="#delete"
+              (click)="getProductById(prod.id!)"><i class="fas fa-trash-alt"></i></button></td>
+        </tr>
+
+      </tbody>
+    </table>
+
+    <!--show  Modal -->
+
+    <div class="modal fade  " id="show" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered  modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Show Product</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body row">
+            <ng-template [ngIf]="pro && category">
+
+              <div class="modal__left col-md-6">
+                <img class="modal__img  col-md-12" src="{{pro.imagepath}}" alt="">
+              </div>
+
+              <div class="modal__right col-md-6">
+                <div class="detail mt-3">
+                  <h2 class="detail__title ">{{pro.name}}</h2>
+                  <span class="badge bg-primary detail__category">{{category.name}}</span>
+                  <p class="detail__description">{{pro.description}}</p>
+                  <p class="detail__price">{{pro.price | currency:'EGP'}} </p>
+                </div>
+              </div>
+
+            </ng-template>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
     </div>
 
 
-<table class="table table-bordered text-center w-75 mx-auto mb-5">
-    <thead>
-      <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Name</th>
-        <th scope="col">Image</th>
-        <th scope="col">Description</th>
-        <th scope="col">Price</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let prod of productArr | filter: searchInput | paginate:{ itemsPerPage: 5, currentPage: p}">
-        <td>{{prod.id}}</td>
-        <td>{{prod.name}}</td>
-        <td><img src="{{prod.imagepath}}" style="width: 80px; height: 80px;" alt=""></td>
-        <td>{{prod.description}}</td>
-        <td>{{prod.price}}</td>
-        <td><button class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#show" (click)="getProductById(prod.id!)">Show</button></td>
-        <td><button class="btn btn-warning " data-bs-toggle="modal" data-bs-target="#edit" (click)="getProductById(prod.id!)">Edit</button></td>
-        <td><button class="btn btn-danger " data-bs-toggle="modal" data-bs-target="#delete"(click)="getProductById(prod.id!)">Delete</button></td>
-      </tr>
-    </tbody>
-  </table>
 
-<!--show  Modal -->
 
- <div class="modal fade  " id="show" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered  modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Show Product</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body row">
-        <ng-template [ngIf]="pro && category">
 
-          <div class="modal__left col-md-6">
-            <img class="modal__img  col-md-12" src="{{pro.imagepath}}" alt="">
-          </div>
-      
-          <div class="modal__right col-md-6">
-            <div class="detail mt-3">
-              <h2 class="detail__title ">{{pro.name}}</h2>
-              <span class="badge bg-primary detail__category">{{category.name}}</span>
-              <p class="detail__description">{{pro.description}}</p>
-              <p class="detail__price">{{pro.price | currency:'EGP'}} </p>
+
+    <!--edit   Modal -->
+    <div class="modal fade w-" id="edit" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered  modal-lg">
+        <div class="modal-content">
+          <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Edit Product</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <div class="modal-body text-center mx-auto w-50">
+
+              <ng-template [ngIf]="pro && category">
+
+                
+                <img class="modal__img  col-md-12" src="{{pro.imagepath}}" alt="">
+                <label for="files" class="btn">Select New Image</label>
+                <input id="files" type="file" style="visibility:hidden;" (change)="onSelect($event)" accept="image/*" >
+
+                <input class="form-control mb-2" type="text" name="name" [(ngModel)]="pro.name">
+
+                <input class="form-control mb-2" type="text" name="imagepath" [(ngModel)]="pro.imagepath">
+
+                <input class="form-control mb-2" type="text" name="category_name" [(ngModel)]="category.name">
+                <!-- <select></select> -->
+
+                <input class="form-control mb-2" type="number" name="price" [(ngModel)]="pro.price">
+
+                <textarea class="form-control mb-5" name="description" [(ngModel)]="pro.description"></textarea>
+              </ng-template>
+            </div>
+            <div class="modal-footer">
+              <input type="submit" class="btn btn-primary" value="Save changes">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                (click)="redirecttodash()">Close</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="delete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered  modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel"> Delete Product</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-            <!-- <img src="{{pro.imagepath}}" style="width: 200px; height: 200px;" alt="">
-            <h2>{{pro.name}}</h2>
-            <p>{{pro.price}}</p>
-            <p>{{pro.description}}</p>
-            <p>{{category.name}}</p> -->
-            
-      </ng-template>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <div class="modal-body text-center">
+            <ng-template [ngIf]="pro">
+              <p>Are you sure to delete this {{pro.name}} food</p>
+            </ng-template>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" (click)="onItemDeleted(pro.id)">Confirm</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+              (click)="redirecttodash()">close</button>
+
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div> 
 
+    <pagination-controls (pageChange)="p = $event" class="d-flex justify-content-end fs-4 me-5">
+    </pagination-controls>
 
-
-
-
-
-<!--edit   Modal --> 
-<div class="modal fade" id="edit" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" > 
-  <div class="modal-dialog modal-dialog-centered  modal-lg">
-    <div class="modal-content">
-      <form #myform = "ngForm" (ngSubmit) = "onSubmit(myform)" >
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Edit Product</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body text-center">
-        <ng-template [ngIf]="pro && category">
-         
-            <input type = "text" name = "name"  [(ngModel)]="pro.name">
-            <br/>
-    
-            <input type = "text" name = "imagepath" [(ngModel)]="pro.imagepath">
-            <br/>
-
-            <input type = "text" name = "category_name" [(ngModel)]="category.name">
-            <br/>
-            <select></select>
-            
-            <input type = "number" name = "price" [(ngModel)]="pro.price">
-            <br/>
-          
-            <textarea name = "description" [(ngModel)]="pro.description"></textarea>
-            <br/>         
-      </ng-template>
-      </div>
-      <div class="modal-footer">
-        <input type = "submit" class="btn btn-primary"  value = "Save changes">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="redirecttodash()">Close</button>
-      </div>
-    </form>
-    </div>
   </div>
 </div>
-
-<div class="modal fade" id="delete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered  modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"> Delete Product</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body text-center">
-        <ng-template [ngIf]="pro">
-            <p>Are you sure to delete this {{pro.name}} food</p>
-      </ng-template>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" (click)="onItemDeleted(pro.id)">Confirm</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="redirecttodash()">close</button>
-        
-      </div>
-    </div>
-  </div>
-</div>
-
-  <pagination-controls
-  (pageChange)="p = $event"
-  class="d-flex justify-content-end fs-4 me-5">
-  </pagination-controls>
-
-
