--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -9,91 +9,9 @@ td,th{
     padding: 15px;
 }
 th{
-    background-color: rgb(73, 69, 69);
+    background-color:#151414;
     color: white;
 }
-// // Variables
-// $dark1: #3e363f;
-// $dark2: #212527;
-// $light1: #fffce8;
-// $light2: #edf7f6;
-// $red: #df4747;
-// $green: #47df5b;
-// $transition250: all 250ms ease-in-out;
-// $transition500: all 500ms ease-in-out;
-
-// // Mixin
-// @mixin center {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//   }
-
-
-// .modal {
-//     @include center();
-//     position: fixed;
-//     top: 0;
-//     height: 100%;
-//     width: 100%;
-//     background: rgba(0, 0, 0, 0.75);
-//     transition: $transition250;
-//     opacity: 0;
-//     visibility: hidden;
-  
-//     &--bg {
-//       visibility: visible;
-//       opacity: 1;
-//       z-index: 1;
-//     }
-  
-//     &__content {
-//       position: absolute;
-//       @include center();
-//       display: grid;
-//       grid-template-columns: repeat(2, 1fr);
-//       max-height: 540px;
-//       max-width: 960px;
-//       background-color: $light2;
-//       visibility: hidden;
-//       opacity: 0;
-//       transform: translateY(-100px);
-//       transition: $transition250;
-  
-//       &--show {
-//         transform: translateY(0);
-//         visibility: visible;
-//         opacity: 1;
-//         z-index: 2;
-//       }
-//     }
-  
-//     &__img {
-//       width: 100%;
-//     }
-  
-//     &__close {
-//       position: absolute;
-//       top: 20px;
-//       right: 20px;
-//       font-size: 24px;
-//       color: $dark2;
-//       cursor: pointer;
-//       transition: $transition250;
-//       z-index: 3;
-  
-//       &:hover {
-//         color: $red;
-//       }
-//     }
-  
-//     &__left,
-//     &__right {
-//       @include center();
-//       padding: 20px;
-//     }
-//   }
-
   .detail {
 
     &__title{
@@ -101,7 +19,7 @@ th{
     }
     &__description {
 
-      color: #fa6400;
+      color: #ffb03b;
     }
   
     &__price {
@@ -112,3 +30,24 @@ th{
     .modal__img{
         height: 200px;
     }
+
+    body {
+      background-color: #eee
+  }
+  
+  .nav-bg{
+    background-color:#151414;
+  }
+  .nav-link:hover {
+      background-color: #525252 !important;
+      color: #ffb03b !important;
+
+  }
+  
+  .nav-link i {
+      transition: all 1s
+  }
+  
+  .nav-link:hover i {
+      transform: rotate(360deg)
+  }
