--- a/src/app/core/product-feature/product-item/product-item.component.html
+++ b/src/app/core/product-feature/product-item/product-item.component.html
@@ -17,7 +17,7 @@
   </textarea>
 </div>
 
-<div style="text-align:center" *ngIf="loggedIn">
+<!-- <div style="text-align:center" *ngIf="loggedIn">
 <ngb-rating [(rate)]="myrating" [readonly]="true" [max]="5">
   <ng-template let-fill="fill">
     <span class="default" [class.filled]="fill ===100">
@@ -29,7 +29,7 @@
   <input class="form-control" placeholder="enter a number" type="text" [(ngModel)]="userRating">
   <button class="btn btn-danger" type="button" (click)="submit(userRating)">Rate</button>
 </div>
-</div>
+</div> -->
 
 <!-- <div class="crud-actions">
   <a data-bs-toggle="modal" data-bs-target="#show" (click)="getProductById(productItem.id!)"><i
