--- a/src/app/core/product-feature/category/category.component.html
+++ b/src/app/core/product-feature/category/category.component.html
@@ -1,6 +1,7 @@
 
 
 <div class="categories">
+    <label for="name">Category Name</label>
     <input type="text" name="name" id="name">
     <button  class="btn btn-primary btn-lg">add category</button>
     <button  class="btn btn-success btn-lg">update category</button>
