--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,6 @@ body{
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
