adding image preview, changes in navbar,order,messages

--- a/src/app/admin/dashboard/contact/contact.component.html
+++ b/src/app/admin/dashboard/contact/contact.component.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-</head>
-<body>
-
-<h1>Feedbacks</h1>
-
-<table id="customers">
+<div class="mt-5 mb-5">
+<button class="btn text-black mt-5" [routerLink]="['/dashboard']"><i class="fas fa-arrow-left"></i> Dashboard</button>
+</div>
+<div class="container text-center mb-5">
+<table id="customers" class="mb-5">
   <tr>
     <th>Name</th>
     <th>Email</th>
@@ -23,8 +18,6 @@
   </tr>
   
 </table>
-
-</body>
-</html>
+</div>
 
 
