--- a/src/app/admin/dashboard/order/order.component.html
+++ b/src/app/admin/dashboard/order/order.component.html
@@ -1,6 +1,6 @@
-
 <div class="cart_section">
   <div class="container-fluid">
+    <button class="btn text-black mb-5" [routerLink]="['/dashboard']"><i class="fas fa-arrow-left"></i> Dashboard</button>
       <div class="row ">
           <div class="col-lg-6">
             <table class="margin"><tr>
