--- a/src/app/core/product-feature/product-form/product-form.component.scss
+++ b/src/app/core/product-feature/product-form/product-form.component.scss
@@ -1,8 +1,7 @@
-
 .btn {
   align-items: center;
   background-clip: padding-box;
-  background-color: #fa6400;
+  background-color: #ffb03b;
   border: 1px solid transparent;
   border-radius: .50rem;
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
@@ -10,7 +9,7 @@
   color: #fff;
   cursor: pointer;
   display: inline-flex;
-  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 600;
   justify-content: center;
@@ -30,7 +29,7 @@
 
 .btn:hover,
 .btn:focus {
-  background-color: #fb8332;
+  background-color: #ffb03b;
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
 }
 
@@ -39,7 +38,12 @@
 }
 
 .btn:active {
-  background-color: #c85000;
+  background-color: #ffb03b;
   box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
   transform: translateY(0);
+}
+
+.img-preview {
+  width: 300px;
+  height: 300px;
 }
