--- a/src/app/admin/dashboard/order/order.component.scss
+++ b/src/app/admin/dashboard/order/order.component.scss
@@ -15,13 +15,31 @@
   }
 
 
-
+  .btn {
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 12px 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    line-height: 1;
+    margin: 0 10px;
+    -webkit-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+    border: 2px solid #ffb03b;
+  }
+  
+  .btn:hover {
+    background: #ffb03b;
+    color: #fff !important;
+  }
 
   .cart_section {
     width: 100%;
     padding-top: 93px;
     padding-bottom: 111px;
-    background-image: url("../../../../assets/img/water.jpeg");
+    // background-image: url("../../../../assets/img/water.jpeg");
     background-size: cover;
     background-position: center;
   }
@@ -64,7 +82,7 @@
     font-size: 13px;
     font-weight: 700;
     color: #fff;
-    background-color: #ff5e14;
+    background-color: #ffb03b;
     border-radius: 10%;
     width: 80px;
     height: 30px;
