--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -68,18 +68,13 @@
                         <a class="item-small-1__image image" [style]="'background-image: url('+item.imagepath+')'">
                         </a>
                         <a class="item-small-1__action" (click)="delete(item)">
-                          <i class="fas fa-times"></i>
+                          <i class="fas fa-times text-dark"></i>
                         </a>
                       </div>
                     </div>
                   </li>
-
+                  <a class="list-item btn btn-dark fs-5" routerLink="/view-cart">View Cart</a>
                 </ul>
-                <!-- actions -->
-                <div class="block list list--hr">
-                  <a class="list-item btn gray" routerLink="/view-cart">View Cart</a>
-                  <a class="list-item btn gray" routerLink="/checkout">Checkout</a>
-                </div>
               </ng-container>
             </app-dropdown>
           </a>
